# dietitian-backend

./: .env.template  .gitignore  .ruff.toml  Dockerfile.dev  README.md  cloudbuild.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: pyright.yml  ruff.yml
backend/: Dockerfile  Dockerfile.dev  dietitian-a0650-firebase-adminsdk-fbsvc-e284185991.json  pyproject.toml
backend/src/: api.py
backend/src/core/: deps.py  enums.py  firebase.py  verify.py
backend/src/core/nutrition_advice_agent/: common.py  step1_dish_detect.py  step2_nutrition.py  step3_advice.py  step4_total.py
backend/src/routers/: agent.py  dietary_record.py  dummy.py  meal.py  profile.py  user.py
backend/src/schemas/: agent.py  meal.py  profile.py  user.py
